deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typebot
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: typebot
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: typebot
    spec:
      containers:
        - name: typebot
          image: typebot-builder-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 3Gi
        - name: typebot-viewer
          image: typebot-viewer-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 3Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
