deploy/base/typebot-builder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typebot-builder
  labels:
    app: typebot-builder
    tags.datadoghq.com/env: production
    tags.datadoghq.com/service: typebot-builder
    tags.datadoghq.com/version: '1.0'
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: typebot-builder
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: typebot-builder
        tags.datadoghq.com/env: production
        tags.datadoghq.com/service: typebot-builder
        tags.datadoghq.com/version: '1.0'
        admission.datadoghq.com/enabled: 'true'
      annotations:
        admission.datadoghq.com/js-lib.version: v5.24.0
        admission.datadoghq.com/typebot-builder.logs: '[{"source":"nodejs","service":"typebot-builder","log_processing_rules":[{"type":"multi_line","name":"no_multiline","pattern":".*"}]}]'
    spec:
      containers:
        - name: typebot-builder
          image: typebot-builder-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 2Gi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 100
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 20
            timeoutSeconds: 3
            successThreshold: 2
            initialDelaySeconds: 35
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
