deploy/base/typebot-viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typebot-viewer
  labels:
    app: typebot-viewer
    tags.datadoghq.com/env: production
    tags.datadoghq.com/service: typebot-viewer
    tags.datadoghq.com/version: '${DD_VERSION_SHA}'
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: typebot-viewer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: typebot-viewer
        tags.datadoghq.com/env: production
        tags.datadoghq.com/service: typebot-viewer
        tags.datadoghq.com/version: '${DD_VERSION_SHA}'
        admission.datadoghq.com/enabled: 'true'
      annotations:
        admission.datadoghq.com/js-lib.version: v5.24.0
    spec:
      containers:
        - name: typebot-viewer
          image: typebot-viewer-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 4Gi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 100
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3001
            periodSeconds: 20
            timeoutSeconds: 3
            successThreshold: 2
            initialDelaySeconds: 35
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
