deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: typebot
  name: typebot
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: typebot
  sessionAffinity: None
  type: ClusterIP
