deploy/base/typebot-builder-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: typebot-builder
  name: typebot-builder
spec:
  ports:
    - name: http-builder
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: typebot-builder
  sessionAffinity: None
  type: ClusterIP
