deploy/base/typebot-viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: typebot-viewer
  name: typebot-viewer
spec:
  ports:
    - name: http-viewer
      port: 81
      protocol: TCP
      targetPort: 3001
  selector:
    app: typebot-viewer
  sessionAffinity: None
  type: ClusterIP
